--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
@@ -5,8 +5,12 @@
     <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button mat-button [matMenuTriggerFor]="menu" matTooltip="{{attributegroup.description}}" matTooltipPosition="left"
         aria-label="Description">{{attributegroup.name}}</button></span> <!--Should Dynamicly count how many items are in that group-->
     <mat-menu #menu="matMenu">
-      <button (click)="openAttDialog(attributegroup.id)" mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
+      <button (click)="openAttDialog(attributegroup.id, attributegroup.name)" mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
       <button (click)="deleteAttributeGroup(attributegroup.id)" mat-menu-item>Delete AttributeGroup</button>
       </mat-menu>
   </mat-list-item>
 </mat-list>
+<ul><li *ngFor="let ag of showatt">
+{{ag.singleAttribute.name}}
+
+</li></ul>
