--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -7,7 +7,7 @@
       <form [formGroup]="angForm" novalidate>
         <div class="form-group">
           <label class="col-md-4">Name</label>
-          <input type="text" class="form-control" formControlName="productName" #productName [(ngModel)]="product.productName" />
+          <input type="text" class="form-control" formControlName="productName" #productName />
         </div>
         <div *ngIf="angForm.controls['productName'].invalid && (angForm.controls['productName'].dirty || angForm.controls['productName'].touched)" class="alert alert-danger">
           <div *ngIf="angForm.controls['productName'].errors.required">
