--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -1,10 +1,11 @@
-<h1>Products</h1><br /><button mat-raised-button [routerLink]='["/product/create"]' >
+<h1>Products</h1><br />
+<button mat-raised-button [routerLink]='["/product/create"]'>
   <i class="fa fa-plus"></i> Add Product
 </button><br /><br />
 <table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let product">{{ product.productID }}</td>
+    <th mat-header-cell *matHeaderCellDef>No.</th>
+    <td mat-cell *matCellDef="let product">{{ product.productID }}</td>
   </ng-container>
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -36,20 +37,27 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef>Published</th>
+
     <div [formGroup]="angForm" novalidate>
-      <td mat-cell *matCellDef="let product">
-        <mat-checkbox formControlName="publishedStatus" #publishedStatus (click)="editProduct(product.productID); updateProduct(publishedStatus.value)" ></mat-checkbox>
-        {{ product.publishedStatus }}
+      <td mat-cell *matCellDef="let product" style="text-align:center;">
+        <span *ngIf="product.publishedStatus === false">
+          <i class="fa fa-times" style="color:red"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
+        </span>
+        <span *ngIf="product.publishedStatus === true">
+          <i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
+          
+        </span>
       </td>
     </div>
+
   </ng-container>
   <ng-container matColumnDef="Edit">
-    <th mat-header-cell *matHeaderCellDef>Edit</th>
-    <td mat-cell *matCellDef="let product"><button mat-raised-button color="primary" [routerLink]="['/product/edit', product.productID]"><i class="fa fa-edit"></i></button></td>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.productID]"><i class="fa fa-edit"></i></button></td>
   </ng-container>
   <ng-container matColumnDef="Delete">
-    <th mat-header-cell *matHeaderCellDef>Delete</th>
-    <td mat-cell *matCellDef="let product"><button mat-raised-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
