--- a/KingPim.Web/ClientApp/src/app/_pages/export/export.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/export/export.component.html
@@ -5,6 +5,8 @@
     <div class="col-md-8">
       <h1>Export</h1>
       <p>Export JSON and XML from Either Category,SubCategory,Product or all of them</p>
+
+      <a [href]="fileUrl" download="file.xml">DownloadFile</a>
     </div>
     <div class="col-md-2">
     </div>
