--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -19,11 +19,14 @@
 
             <div class="formcontainer">
               <mat-form-field>
-                <input matInput type="text" placeholder="Product Name" class="form-control" formControlName="productName" #productName />
+                <input matInput type="text" placeholder="Product Name" class="form-control" formControlName="name" #name [value]="product.name" />
+              </mat-form-field>
+              <mat-form-field>
+                <textarea matInput type="text" placeholder="Description" class="form-control" formControlName="description" #description [value]="product.description"></textarea>
               </mat-form-field>
               <mat-form-field>
                 <mat-select placeholder="Select SubCategory" formControlName="subCategoryId" #subCategoryId>
-                  <mat-option [value]="subCategory.id" *ngFor="let subCategory of subcategories ">
+                  <mat-option [value]="product.subCategory.name" *ngFor="let subCategory of subcategories ">
                     {{ subCategory.name}}
                   </mat-option>
                 </mat-select>
@@ -38,14 +41,10 @@
           </mat-card-header>
           <mat-card-content>
             <div class="formcontainer">
-              <ul>
-                <li *ngFor="let subCategory of subcategories ">
-                  {{subCategory.attributeGroup}}
-                </li>
-              </ul>
+              <!--Attributes goes here-->
               <br />
               <mat-card-actions>
-                <button mat-raised-button (click)="updateProduct(productName.value, subCategoryId.value)">
+                <button mat-raised-button (click)="updateProduct(name.value, description.value, subCategoryId.value)">
                   Add Product
                 </button>
               </mat-card-actions>
