--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -5,19 +5,19 @@
 <table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let product">{{ product.productID }}</td>
+    <td mat-cell *matCellDef="let product">{{ product.id }}</td>
   </ng-container>
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let product">{{product.productName}}</td>
+    <td mat-cell *matCellDef="let product">{{product.name}}</td>
   </ng-container>
   <ng-container matColumnDef="Category">
     <th mat-header-cell *matHeaderCellDef>Category</th>
-    <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryID }}</td>
+    <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryId }}</td>
   </ng-container>
   <ng-container matColumnDef="SubCategory">
     <th mat-header-cell *matHeaderCellDef>SubCategory</th>
-    <td mat-cell *matCellDef="let product">{{ product.subCategory.subcategoryName }}</td>
+    <td mat-cell *matCellDef="let product">{{ product.subCategory.name }}</td>
   </ng-container>
   <ng-container matColumnDef="Created">
     <th mat-header-cell *matHeaderCellDef>Created</th>
@@ -45,19 +45,19 @@
         </span>
         <span *ngIf="product.publishedStatus === true">
           <i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
-          
+
         </span>
       </td>
     </div>
-
+    <!--<span matTooltip="{{product.description}}"></span>-->
   </ng-container>
   <ng-container matColumnDef="Edit">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.productID]"><i class="fa fa-edit"></i></button></td>
+    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.id]" ><i class="fa fa-edit"></i></button></td>
   </ng-container>
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
+    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.id)" ><i class="fa fa-trash"></i></button></td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
