--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Add Sub-Category</h1>
 <form [formGroup]="angForm" novalidate>
   <mat-form-field>
-    <input matInput type="text" class="form-control" formControlName="subcategoryName" #subcategoryName placeholder="SubCategory" />
+    <input matInput type="text" class="form-control" formControlName="name" #name placeholder="SubCategory" />
   </mat-form-field>
   <mat-form-field>
     <mat-select placeholder="Select Category" formControlName="categoryId" #categoryId>
@@ -12,7 +12,7 @@
   </mat-form-field>
   <div class="form-group">
     <!--DONT FORGET TO PUT VALUES ON CLICK FUNCTION-->
-    <button mat-raised-button color="primary" (click)="addSubCategory(subcategoryName.value, categoryId.value); onNoClick()"
+    <button mat-raised-button color="primary" (click)="addSubCategory(name.value, categoryId.value); onNoClick()"
             [disabled]="angForm.pristine || angForm.invalid || loading"
             class="btn btn-primary">
       Add SubCategory
