--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
@@ -2,15 +2,13 @@
   <mat-list-item><strong>Attributegroups</strong><a (click)="openAgDialog()"><strong>+</strong></a></mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item *ngFor="let attributegroup of attributegroups">
-    <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button mat-button [matMenuTriggerFor]="menu" matTooltip="{{attributegroup.description}}" matTooltipPosition="left"
+    <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button (click)="showAttributes(attributegroup.id)"mat-button [matMenuTriggerFor]="menu" matTooltip="{{attributegroup.description}}" matTooltipPosition="left"
         aria-label="Description">{{attributegroup.name}}</button></span> <!--Should Dynamicly count how many items are in that group-->
     <mat-menu #menu="matMenu">
       <button (click)="openAttDialog(attributegroup.id, attributegroup.name)" mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
-      <button (click)="deleteAttributeGroup(attributegroup.id)" mat-menu-item>Delete AttributeGroup</button>
+      <button class="delbutton" (click)="deleteAttributeGroup(attributegroup.id)"  mat-menu-item>Delete AttributeGroup</button>
+      <mat-divider></mat-divider><br>
+      <ul><li style="list-style-type: none"*ngFor="let att of attributes">{{att.name}} / {{att.type}}</li></ul>
       </mat-menu>
   </mat-list-item>
 </mat-list>
-<ul><li *ngFor="let ag of showatt">
-{{ag.singleAttribute.name}}
-
-</li></ul>
