--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-add/product-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-add/product-add.component.html
@@ -33,23 +33,32 @@
               <br />
             </div>
           </mat-card-content>
-        </mat-card>
+        </mat-card><br>
         <mat-card>
           <mat-card-header>
             <mat-card-title>Attributes</mat-card-title>
           </mat-card-header>
           <mat-card-content>
             <div class="formcontainer">
-              <!--Attributes here-->
+                <mat-form-field>
+                    <mat-select placeholder="Select Attribute" formControlName="subCategoryId" #subCategoryId>
+                      <mat-option [value]="subCategory.id" *ngFor="let subCategory of subcategories ">
+                        {{ subCategory.name}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  <mat-form-field>
+                      <input matInput type="text" placeholder="Product Name" class="form-control" formControlName="name" #name />
+                    </mat-form-field>
               <br />
-              <mat-card-actions>
-                <button mat-raised-button (click)="addProduct(name.value, description.value, subCategoryId.value)">
-                  Add Product
-                </button>
-              </mat-card-actions>
             </div>
           </mat-card-content>
         </mat-card>
+        <mat-card-actions><br>
+            <button mat-raised-button (click)="addProduct(name.value, description.value, subCategoryId.value)">
+              Add Product
+            </button>
+          </mat-card-actions>
       </form>
 
     </div><!--Closing Main Div-->
