--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
@@ -5,7 +5,7 @@
     <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button mat-button [matMenuTriggerFor]="menu">{{subcategory.name}}</button></span> <!--Should Dynamicly count how many items are in that group-->
     <mat-menu #menu="matMenu">
       <button mat-menu-item>Filter Products by: {{subcategory.name}}</button>
-      <button (click)="deleteSubCategory(subcategory.id)" mat-menu-item>Delete SubCategory</button>
+      <button class="delbutton"(click)="deleteSubCategory(subcategory.id)" mat-menu-item>Delete SubCategory</button>
     </mat-menu>
   </mat-list-item>
 </mat-list>
