--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -5,7 +5,7 @@
 <table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let product">{{ product.id }}</td>
+    <td mat-cell *matCellDef="let product"><a (click)="openProdAttDialog(product.id)">{{ product.id }}</a></td>
   </ng-container>
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -37,18 +37,14 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef>Published</th>
-
-    <div [formGroup]="angForm" novalidate>
       <td mat-cell *matCellDef="let product" style="text-align:center;">
         <span *ngIf="product.publishedStatus === false">
           <i class="fa fa-times" style="color:red"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
         </span>
         <span *ngIf="product.publishedStatus === true">
           <i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
-
         </span>
       </td>
-    </div>
     <!--<span matTooltip="{{product.description}}"></span>-->
   </ng-container>
   <ng-container matColumnDef="Edit">
@@ -57,8 +53,11 @@
   </ng-container>
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.id)" ><i class="fa fa-trash"></i></button></td>
+    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.id)" ><i class="fa fa-trash"></i></button>
+
+    </td>
   </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
 </table>
