--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -8,8 +8,8 @@
       <app-product-get></app-product-get>
     </div>
     <div class="col-md-2">
-      <app-attributegroup-get></app-attributegroup-get><br />
-      <app-attribute-get></app-attribute-get>
+      <app-publish></app-publish><br />
+      <app-attributegroup-get></app-attributegroup-get>
     </div>
   </div>
 </div>
