--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -5,15 +5,12 @@
 <table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let product"><a (click)="openProdAttDialog(product.id)">{{ product.id }}</a></td>
+    <td mat-cell *matCellDef="let product"><button mat-raised-button (click)="openProdAttDialog(product.id)" matTooltip="Click Here for Attributes(temp)"
+      aria-label="Button that displays a tooltip when focused or hovered over"><span >{{ product.id }}</span></button></td>
   </ng-container>
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let product">{{product.name}}</td>
-  </ng-container>
-  <ng-container matColumnDef="Category">
-    <th mat-header-cell *matHeaderCellDef>Category</th>
-    <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryId }}</td>
   </ng-container>
   <ng-container matColumnDef="SubCategory">
     <th mat-header-cell *matHeaderCellDef>SubCategory</th>
@@ -45,15 +42,15 @@
           <i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
         </span>
       </td>
-    <!--<span matTooltip="{{product.description}}"></span>-->
+
   </ng-container>
   <ng-container matColumnDef="Edit">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.id]" ><i class="fa fa-edit"></i></button></td>
+    <td mat-cell *matCellDef="let product" ><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.id]" ><i class="fa fa-edit"></i></button></td>
   </ng-container>
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let product" style="text-align:right;"><button mat-flat-button color="warn" (click)="deleteProduct(product.id)" ><i class="fa fa-trash"></i></button>
+    <td mat-cell *matCellDef="let product"><button mat-flat-button color="warn" (click)="deleteProduct(product.id)" ><i class="fa fa-trash"></i></button>
 
     </td>
   </ng-container>
