--- a/KingPim.Web/ClientApp/src/app/_pages/publish/publish.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/publish/publish.component.html
@@ -1,3 +1,50 @@
-The buttons wuush
+<div class='container-fluid' id="main_container">
+  <div class="row">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-8">
+      <h1>Publish</h1><br>
+      <h6 style="color:red;">* This function is not yet implemented at the moment there is a publish radio button within the Edit function on the catalog page.
+      the true/false value on the radio button also changes the related value of category and .</h6>
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Publish selected groups/items</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+            <!--This one handles the checkboxes-->
+            <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
+              <button mat-icon-button disabled></button>
+              <mat-checkbox class="checklist-leaf-node"
+                            [checked]="checklistSelection.isSelected(node)"
+                            (change)="todoLeafItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+            </mat-tree-node>
+            <!--This one handle if list is empty-->
+            <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
+              <button mat-icon-button disabled></button>
+            </mat-tree-node>
+            <!--This is the markup that handles the chevron droplist button-->
+            <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
+              <button mat-icon-button matTreeNodeToggle
+                      [attr.aria-label]="'toggle ' + node.filename">
+                <mat-icon class="mat-icon-rtl-mirror">
+                  {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                </mat-icon>
+              </button>
+              <mat-checkbox [checked]="descendantsAllSelected(node)"
+                            [indeterminate]="descendantsPartiallySelected(node)"
+                            (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+            </mat-tree-node>
+          </mat-tree>
+        </mat-card-content>
+      </mat-card>
+      <div class="formcontainer">
+        <br />
+        <mat-card-actions>
+          <a mat-raised-button href="#">Publish</a> <a mat-raised-button href="#">Clear all selections</a>
+        </mat-card-actions>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
 
-<button (click)="updateProductStatus()">Product</button>
