--- a/KingPim.Web/ClientApp/src/app/_pages/accounts/accounts.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/accounts/accounts.component.html
@@ -8,7 +8,7 @@
           <strong *ngIf="user.userRoleId === 2">Publisher</strong>
           <strong *ngIf="user.userRoleId === 3">Editor</strong>
           : {{user.username}} ({{user.firstName}} {{user.lastName}})
-          - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+          <br /><a (click)="deleteUser(user.id)" class="text-danger">Delete</a> | 
           <a (click)="getUser(user.id)" class="text-danger">Edit</a>
         </li>
       </ul>
