observable in service

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/product-attribute/product-attribute.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/product-attribute/product-attribute.component.html
@@ -3,7 +3,7 @@
 <br>
 <form [formGroup]="angForm" novalidate>
   <input type="hidden" value="{{data.apId}}" formControlName="productId" />
-
+{{myName}}
 
   <br />
   <p style="color:red;">
